{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 1304,
  "lineage": "8f3fae62-245d-5a94-d8b5-91f85a05c0fc",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "beanstalk-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:security-group/sg-011d3a5e2bab6b77b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011d3a5e2bab6b77b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lavagna-loadbalancer-sg",
            "name_prefix": "",
            "owner_id": "536460581283",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f49c903d8a6d7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "beanstalk-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:security-group/sg-0cddb082002ece0d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cddb082002ece0d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lavagna-instance-sg",
            "name_prefix": "",
            "owner_id": "536460581283",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f49c903d8a6d7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:security-group/sg-0b3385b4a62d428c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3385b4a62d428c3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cddb082002ece0d3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "banking_application_database_sg",
            "name_prefix": "",
            "owner_id": "536460581283",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f49c903d8a6d7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.beanstalk-instance-sg",
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "beanstalk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:internet-gateway/igw-020c04a8efb640bc0",
            "id": "igw-020c04a8efb640bc0",
            "owner_id": "536460581283",
            "vpc_id": "vpc-00f49c903d8a6d7e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "beanstalk_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:route-table/rtb-05ff53ac8f72f2453",
            "id": "rtb-05ff53ac8f72f2453",
            "owner_id": "536460581283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020c04a8efb640bc0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f49c903d8a6d7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.beanstalk_igw",
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "beanstalk_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0740c4eb18116e054",
            "route_table_id": "rtb-05ff53ac8f72f2453",
            "subnet_id": "subnet-084b652bede32f55d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.beanstalk_igw",
            "module.vpc.aws_route_table.beanstalk_route_table",
            "module.vpc.aws_subnet.beanstalk_subnet",
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "beanstalk_subnet_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cecb523c344f2eed",
            "route_table_id": "rtb-05ff53ac8f72f2453",
            "subnet_id": "subnet-0d596bc73afef0c39"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.beanstalk_igw",
            "module.vpc.aws_route_table.beanstalk_route_table",
            "module.vpc.aws_subnet.beanstalk_subnet-2",
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "beanstalk_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:subnet/subnet-084b652bede32f55d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084b652bede32f55d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536460581283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00f49c903d8a6d7e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "beanstalk_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:subnet/subnet-0d596bc73afef0c39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d596bc73afef0c39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536460581283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00f49c903d8a6d7e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.beanstalk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "beanstalk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536460581283:vpc/vpc-00f49c903d8a6d7e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082d8bb431d97899a",
            "default_route_table_id": "rtb-08256bf86fbe151d9",
            "default_security_group_id": "sg-0af6ab342caa3972f",
            "dhcp_options_id": "dopt-0d379d657a0673902",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f49c903d8a6d7e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08256bf86fbe151d9",
            "owner_id": "536460581283"
          }
        }
      ]
    }
  ]
}